--- a/src/content/blog/KMP ACAM.mdx
+++ b/src/content/blog/KMP ACAM.mdx
@@ -21,7 +21,7 @@ tags:
 
 ### 1. 基本定义
 
-Border：一个字符串的相等的真前后缀长度称为这个字符串的 Border，如 $ABCBA$ 的 Border 就为 $4$。
+Border：一个字符串的相等的真前后缀长度称为这个字符串的 Border，如 $AAAAA$ 的 Border 就为 $4$。
 
 然后就没了。
 
