--- a/src/content/blog/字符串一家子.mdx
+++ b/src/content/blog/字符串一家子.mdx
@@ -152,3 +152,11 @@ inline void exKMP()
 我们考虑对每个位置求出一个回文半径 $p$，表示 $s _ {[i - p _ i + 1,i + p _ i - 1]}$ 是一个回文串，像 exKMP 那样，我们维护 $mid,r$ 表示目前维护的回文区间为 $[l,r]$，中点为 $mid$。
 
 对于一个 $i$，若有 $i \le r$，则将 $p _ i$ 设为对称点的 $p$，即 $p _ i = \min \{ p _ {2mid - i},r - i + 1 \}$，然后暴力扩展，随后若超出边界则重新维护 $mid,r$。
+
+### 4. 子序列自动机
+
+顾名思义就是解决子序列有关问题的自动机。
+
+转移函数 $\delta(u,c)$ 表示从 $u$ 开始往后的第一个字符 $c$ 的位置，没有则为一个虚点，可以维护为 $n + 1$。我们可以从后往前建自动机，初始先将每个 $\delta(n + 1,c)$ 设为 $n + 1$，然后从 $n$ 到 $1$，复制 $\delta(i + 1)$ 后将 $\delta(i,s _ i)$ 设为 $i$。因为只有复制和单点修改所以字符集较大时同样可以用可持久化区间树来优化。
+
+匹配子序列就可以将文本串放到子序列自动机上，每次走下一个，最后不在 $n + 1$ 就是一个子序列。
