--- a/src/content/blog/日寄25.11.mdx
+++ b/src/content/blog/日寄25.11.mdx
@@ -33,3 +33,23 @@ CSP S
 
 不想写这场的了，把 CSP-S 的题解写了写。
 
+### 11.13
+
+欸又忘了写日记了。
+
+最近考试有点频繁，不太想写记录，正好又去学了下 PyQt，要不写个 PyQt 的学习笔记（
+
+### 11.19
+
+好久没写了。
+
+做题总结还是写一写吧，但是可能也没什么用了（笑
+
+最后两周了，可能不会更新东西了。
+
+NOIP 模拟赛还是 150 左右的样子，可能没有一等奖了。
+
+哎得什么算什么吧。
+
+> よろめきながらでも（就算步伐多踉跄） がいているんだよ（我也是在挣扎着啊）
+>> 迷星叫(Mayoiuta), MyGO!!!!!
