--- a/src/content/blog/日寄25.11.mdx
+++ b/src/content/blog/日寄25.11.mdx
@@ -53,3 +53,9 @@ NOIP 模拟赛还是 150 左右的样子，可能没有一等奖了。
 
 > よろめきながらでも（就算步伐多踉跄） がいているんだよ（我也是在挣扎着啊）
 >> 迷星叫(Mayoiuta), MyGO!!!!!
+
+### 11.20
+
+诶我草数论忘完了。
+
+今天复习一下数论吧，顺便把之前加的那个数学集合写了。
