--- a/src/content/blog/日寄25.11.mdx
+++ b/src/content/blog/日寄25.11.mdx
@@ -52,10 +52,31 @@ NOIP 模拟赛还是 150 左右的样子，可能没有一等奖了。
 哎得什么算什么吧。
 
 > よろめきながらでも（就算步伐多踉跄） がいているんだよ（我也是在挣扎着啊）
->> 迷星叫(Mayoiuta), MyGO!!!!!
+>> 迷星叫(Mayoiuta)，MyGO!!!!!
 
 ### 11.20
 
 诶我草数论忘完了。
 
 今天复习一下数论吧，顺便把之前加的那个数学集合写了。
+
+### 11.25
+
+Last 4 Days.
+
+收尾阶段了，明天团建放松一下。
+
+有很多话想说，但是又不知道从何说起。
+
+如果 tourist / jiangly 附身可能还可以去省选（笑
+
+可能会把源码仓库 Archive 掉，留个纪念吧。
+
+提高组一等奖只能看高二能不能去拿一个。
+
+听空白与宣泄听了一晚上，GBC 后几集感触还是很多的。
+
+这个站的未来就做闲聊 / 文化课笔记和一些乱七八糟的吧。
+
+> 死にたいって思ってなくて（我并非渴望死亡） 死ぬほど生きて（而是去拼命活着）
+>> 空白与宣泄，TOGENASHI TOGEARI
