--- a/src/content/blog/数学一家子.md
+++ b/src/content/blog/数学一家子.md
@@ -80,7 +80,14 @@ $$
 
 ### 3. 大大小小的数论定理
 
-这几个都有普通和 ex 版本。
+#### Bezout 定理
+
+设 $a,b$ 为不全为 $0$ 的整数，则 $\forall x,y \in \Z,\gcd(a,b) \mid ax + by$，并且 $\exist x,y \in Z,ax + by = \gcd(a,b)$。
+
+---
+
+下面几个都有普通和 ex 版本。
+
 
 #### 辗转相除法
 
@@ -94,11 +101,30 @@ $\gcd(x,y) = \gcd(y,x \bmod y)$，当 $y = 0$ 时为 $x$。
 
 #### CRT
 
-TBU
+哎我感觉不如下面的 exCRT 好用。
+
+求解的是如下一元线性同余方程组：$\begin{cases} x \equiv a _ 1 \pmod {n _ 1} \\ x \equiv a _ 2 \pmod {{n _ 2}} \\ \vdots \\ x \equiv a _ k \pmod {n _ k}\end{cases}$，条件是所有 $n _ i$ 两两互质。
+
+做法如下：
+
+1. 求出 $N = \prod n _ i$
+2. 对于第 $i$ 个方程，求出 $m _ i = \frac{N}{n _ i}$ 与 $m _ i$ 在模 $n _ i$ 意义下的逆元 $m _ i ^ {-1}$，最后答案为 $\sum a _ i m _ i m _ i ^ {-1} \pmod N$。
 
 #### exCRT
 
-TBU
+轮椅。
+
+条件是删去 CRT 的条件，在某些题里面可以用来合并答案。
+
+设有两个方程 $x \equiv a _ 1 \pmod {n _ 1},x \equiv a _ 2 \pmod {n _ 2}$。
+
+则可以转化为不定方程 $x = k _ 1 n _ 1 + a _ 1,x = k _ 2 n _ 2 + a _ 2$，则有 $k _ 1 n _ 1 - k _ 2 n _ 2 = a _ 2 - a _ 1$。
+
+由 Bezout 定理，当 $\gcd(n _ 1,n _ 2) \nmid a _ 2 - a _ 1$ 时无解。
+
+否则可以用 exGCD 求出来一组可行的 $k _ 1,k _ 2$，两原方程可以合并为 $x \equiv k _ 1 n _ 1 + a _ 1 \pmod {\operatorname{lcm}(n _ 1,n _ 2)}$。
+
+合并成只剩一个后 exGCD 求值即可。
 
 #### Lucas 定理
 
