--- a/src/content/blog/日寄25.11.mdx
+++ b/src/content/blog/日寄25.11.mdx
@@ -80,3 +80,11 @@ Last 4 Days.
 
 > 死にたいって思ってなくて（我并非渴望死亡） 死ぬほど生きて（而是去拼命活着）
 >> 空白与宣泄，TOGENASHI TOGEARI
+
+### 11.26
+
+团建怎么和上次的流程一模一样啊。
+
+但是 CS 环节激烈了很多，很久没有这么大的运动量了。
+
+复习板子，复习 Trick，做自己最后能做的吧。
