--- a/src/content/blog/afo.mdx
+++ b/src/content/blog/afo.mdx
@@ -1,3 +1,15 @@
+---
+title: NOIP 2025 游记 & 退役记
+description: NOIP 2025 游记 & 退役记
+pubDate: 2025-11-30
+categories:
+    - OI生涯记录
+    - NOIP
+    - reCords
+tags:
+    - OI
+---
+
 ### 前言
 
 我知道，我没能力去省选，我也知道，我就是文化课的命，但，我也想最后冲一次，哪怕是毫无意义的飞蛾扑火。
