--- a/src/content/blog/afo.mdx
+++ b/src/content/blog/afo.mdx
@@ -77,3 +77,19 @@ T4 $\Omicron(n ^ 3)$ 喜提 $0$ 分，啥都没交。
 Farewell.
 
 AFOed.
+
+### 后不知道多少日谈
+
+忘了 Synch 导致的。
+
+草拟吗的语文。
+
+出分了，看一眼。
+
+欸我 T1 挂了 $5$ 分还好，欸我 T2 $28$ 分还好。T3 挂了，，，$-24$ ？！
+
+最后是 $95 + 28 + 32 + 0 = 155$。
+
+我真捞到一等了？
+
+篮球不会说谎（（（
